# esmeraldamfcc

./: CMakeLists.txt  DIFF.txt  README.md
dsp/: __program.c  acf.c  acf.h  basics.c  basics.h  channel.c  channel.h  csp.c  csp.h  dct.c  dct.h  delay.c  delay.h  deriv.c  dft.c  dsp.h  dsp_fex.c  dsp_vad.c  dwt.c  dwt.h  errors.h  fextract.c  fextract.h  fft.c  filterbank.c  filterbank.h  lpc.c  lpc.h  mel.c  mfcc.c  mfcc.h  mfcc_1_4.c  mfcc_1_4.h  preemph.c  sdft.c  sdft.h  shift.c  shift.h  tirol.c  vad.c  (+2 more)
lib/: esmeraldamfcc.cpp  esmeraldamfcc.h
mx/: __program.c  basics.c  basics.h  complex.h  eigen.c  eigen.h  histogram.c  histogram.h  matrix.c  matrix.h  prob.c  prob.h  real.h  score.c  score.h  sum.c  sum.h  vector.c  vector.h
rs/: README  basics.c  basics.h  hashq.c  io.c  memory.c  memory.h  messages.c  name.c  queue.c  stack.c  stack.h  time.c  time.h
util/: mfcctest.cpp
